# functional-dag

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.dox  meson.build  meson.options
.github/workflows/: cmake-multi-platform.yml  cmake-ubuntu-build.yml  cmake-ubuntu-test.yml  manual.yml  ubuntu-build.yml
Formula/: FilterDag.rb  FunctionalDag.rb  functional-dag.rb  functional_dag.rb
cmake-toolchains/: arm64-tc.cmake
debian/: control
docs/: annotated.html  classes.html  classfn__dag_1_1_g_u_i_d-members.html  classfn__dag_1_1_g_u_i_d.html  classfn__dag_1_1dag-members.html  classfn__dag_1_1dag.html  classfn__dag_1_1dag__fake__source-members.html  classfn__dag_1_1dag__fake__source.html  classfn__dag_1_1dag__fanout__node-members.html  classfn__dag_1_1dag__fanout__node.html  classfn__dag_1_1dag__manager-members.html  classfn__dag_1_1dag__manager.html  classfn__dag_1_1dag__node-members.html  classfn__dag_1_1dag__node.html  classfn__dag_1_1dag__source-members.html  classfn__dag_1_1dag__source.html  classfn__dag_1_1library-members.html  classfn__dag_1_1library.html  dag__fanout__impl_8hpp_source.html  dag__impl_8hpp_source.html  dag__interface_8hpp_source.html  dag__node__impl_8hpp_source.html  default__types__impl_8hpp_source.html  dir_3757618d553bcfa9dff9e477a6e636bd.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_c8e7066d564cae5b6d68a2364bfe3b62.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f04f1d8fca92e11c2849449fd55ea993.html  dir_f5d1498c61006c9ee6ecc0902ab7a05e.html  doxygen_crawl.html  error__codes_8h_source.html  files.html  filter__sys_8hpp_source.html  fn__dag__interface_8hpp_source.html  functions.html  functions_func.html  functions_vars.html  guid__generated_8h_source.html  guid__impl_8hpp_source.html  (+19 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+17 more)
flatbufs/: error_codes.fbs  guid.fbs  lib_spec.fbs
include/filter_sys/: dag_fanout_impl.hpp  dag_impl.hpp  dag_interface.hpp  dag_node_impl.hpp  dag_utils.hpp  default_types_impl.hpp  filter_sys.hpp  fn_dag_interface.hpp  lib_utils.h
include/functional-dag/: dag_interface.hpp  dag_utils.hpp
include/functional_dag/: dag_fanout_impl.hpp  dag_impl.hpp  dag_interface.hpp  dag_node_impl.hpp  dlpack.h  filter_sys.hpp  fn_dag_interface.hpp  guid_impl.hpp  incbin_util.h  lib_utils.h  libutils.h  refreshable_node.hpp
include/functional_dag/core/: dag_utils.hpp
include/functional_dag/impl/: dag_fanout_impl.hpp  dag_impl.hpp  dag_node_impl.hpp  default_types_impl.hpp
schemas/: guid.fbs
src/: main2.cpp
src/filter_sys/: libutils.cpp
src/functional_dag/: dag_manager.cpp  libutils.cpp
test/filter_sys/: dag_tests.cpp  lib_tests.cpp
test/functional_dag/: dag_tests.cpp  guid_tests.cpp  lib_tests.cpp
